samples/_failures_safe/1761651265_d6dfca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b6d662c.c: In function ‘main’:
./samples/SAFE/__tmp_6b6d662c.c:176:5: error: expected declaration or statement at end of input
  176 |     }
      |     ^
